fixed a bug for dark mode

--- a/DSC/style.css
+++ b/DSC/style.css
@@ -719,7 +719,7 @@ canvas {
 
 #particles-js {
     position: relative;
-    z-index: -10;
+    /* z-index: -10; */
     width: 100%;
     height: 100vh;
     background-color: transparent;
